--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,10 @@ input:focus {
     background-color: #e6e8ec;
 }
 
+input:hover {
+    border-color: #fca311;
+}
+
 .btn {
     text-transform: uppercase;
     font-weight: 900;
